--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <h1>THOMAS</h1>
     </header>
 
-    <div class="gallery">
+    <div id="gallery">
+        <p id="text-in-gallery">Image Project</p>
         <img src="assets/documents/Project-1.png" style="display: none;" alt="Project-Todo-List" id="todo-img">
     </div>
 
