correção dos botões

--- a/index.html
+++ b/index.html
@@ -16,14 +16,18 @@
     </header>
 
     <div id="gallery">
-        <p id="text-in-gallery">Image Project</p>
+        <p id="text-in-gallery">IMAGE PROJECT</p>
         <img src="assets/documents/Project-1.png" style="display: none;" alt="Project-Todo-List" id="todo-img">
+        <img src="assets/documents/Project-2.png" style="display: none;" alt="Project-Relógio" id="time-img">
+        <img src="assets/documents/Project-3.png" style="display: none;" alt="Project-Css-Cube" id="cube-img">
+        <img src="assets/documents/Project-4.png" style="display: none;" alt="Project-Login-Responsive" id="login-img">
+        <img src="assets/documents/Project-5.png" style="display: none;" alt="Project-Spotify-Page" id="spotify-img">
     </div>
 
     <div class="border-linha">
         <div class="linha">
-            <button class="points" onclick="mostrar()" id="btn-todo"></button>
-            <button class="points"></button>
+            <button class="points" onclick="mostrar1()" id="btn-todo"></button>
+            <button class="points" onclick="mostrar2()" id="btn-time"></button>
             <button class="points"></button>
             <button class="points"></button>
             <button class="points"></button>
