--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <div class="linha">
             <button class="points" onclick="mostrar1()" id="btn-todo"></button>
             <button class="points" onclick="mostrar2()" id="btn-time"></button>
-            <button class="points"></button>
-            <button class="points"></button>
-            <button class="points"></button>
+            <button class="points" onclick="mostrar3()" id="btn-cube"></button>
+            <button class="points" onclick="mostrar4()" id="btn-login"></button>
+            <button class="points" onclick="mostrar5()" id="btn-spotify"></button>
         </div>
     </div>
 
