estilização do background

--- a/index.html
+++ b/index.html
@@ -32,13 +32,33 @@
             <button class="points" onclick="mostrar4()" id="btn-login"></button>
             <button class="points" onclick="mostrar5()" id="btn-spotify"></button>
         </div>
+        <div class="text-linha">
+            <p>Clique em um ponto na linha para ver um projeto</p>
+        </div>
     </div>
 
     <!--Background-->
     <div class="filter-background">
-        <video autoplay loop muted class="background-video">
-            <source src="assets/documents/Animated-Video-Background.mp4">
-        </video>
+        <div class="vertical-lines">
+            <div style="--i:11"></div>                      
+            <div style="--i:50"></div>                      
+            <div style="--i:22"></div>                      
+            <div style="--i:33"></div>                      
+            <div style="--i:25"></div>                      
+            <div style="--i:18"></div>                      
+            <div style="--i:28"></div>                      
+            <div style="--i:10"></div>                      
+            <div style="--i:13"></div>                      
+            <div style="--i:15"></div>                      
+            <div style="--i:30"></div>                      
+            <div style="--i:25"></div>                      
+            <div style="--i:20"></div>                      
+            <div style="--i:15"></div>                      
+            <div style="--i:11"></div>                      
+            <div style="--i:33"></div>                      
+            <div style="--i:22"></div>                      
+            <div style="--i:18"></div>                      
+        </div>
     </div>
 
 
