inicio do footer

--- a/index.html
+++ b/index.html
@@ -82,7 +82,14 @@
         </div>
 
         <div class="footer" id="footerid">
+            <div class="certificados">
+                
+            </div>
+
             
+            <div class="contato">
+                <!--fazer inputs-->
+            </div>
         </div>
     </div>
 </body>
