--- a/index.html
+++ b/index.html
@@ -11,13 +11,10 @@
 </head>
 <body> 
     <!--NavBar-->
-    <header>
-        <h1>THOMAS</h1>
-    </header>
     <div class="conatiner">
         <div class="main">
             <div id="gallery">
-                <p id="text-in-gallery">IMAGE PROJECT</p>
+                <p id="text-in-gallery">Imagem do projeto</p>
 
 
                 <a href="pages/to-do-list/index.html">
@@ -81,6 +78,7 @@
         </div>
 
         <div class="footer" id="footerid">
+            <h2>CERTIFICADOS</h2>
             <div class="certificados-container">
                 <div class="certificados">
                     <button id="prev-button"><</button>
@@ -95,7 +93,8 @@
             </div>
             
             <div class="contato">
-                <!--fazer inputs-->
+                <a href="https://github.com/ThomasGSales" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/thomas-gabriel-martins-sales-246654234/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
             </div>
         </div>
     </div>
