--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
                 <p id="text-in-gallery">Imagem do projeto</p>
 
 
-                <a href="pages/to-do-list/index.html">
+                <a href="https://644f24ed79d5523ee32bd77f--relaxed-scone-8f92e6.netlify.app/">
                     <img src="assets/documents/Project-1.png" style="display: none;" alt="Project-Todo-List" id="todo-img">
                 </a>
-                <a href="pages/Time/index.html">
+                <a href="https://644f262ccbc6c43ca91d0d1d--scintillating-sfogliatella-b66528.netlify.app/">
                     <img src="assets/documents/Project-2.png" style="display: none;" alt="Project-Relógio" id="time-img">
                 </a>
-                <a href="pages/cube css/index.html">
+                <a href="https://644f26c6ba939e39c3a96111--helpful-kataifi-584dc8.netlify.app/">
                     <img src="assets/documents/Project-3.png" style="display: none;" alt="Project-Css-Cube" id="cube-img">
                 </a>
-                <a href="pages/resp site/index.html">
+                <a href="https://644f27121e322e3cb33bfe22--sparkling-semifreddo-0996c1.netlify.app/">
                     <img src="assets/documents/Project-4.png" style="display: none;" alt="Project-Login-Responsive" id="login-img">
                 </a>
-                <a href="pages/spotify/index.html">
+                <a href="https://644f27678bfb343c4e8c8172--marvelous-liger-a14c07.netlify.app/">
                     <img src="assets/documents/Project-5.png" style="display: none;" alt="Project-Spotify-Page" id="spotify-img">
                 </a>
 
